add front-end-store part 1
template:
-contact
-food
-drink
-household
-howtobuy

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -25,12 +25,16 @@ nav .nav-link{
   margin: 0 8px;
 }
 
+.modal .search-form {
+  width: 92%;
+}
+
 /* Header Carousel */
 #carouselExampleIndicators img {
     height: 100vh;
   }
 
-/* Content */
+/* Section */
 .section-title {
   margin: 3rem 0;
   text-align: center;
@@ -59,6 +63,149 @@ nav .nav-link{
 
 .card:hover {
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Product */
+#Food {
+  margin-top:5rem;
+}
+
+#Drink {
+  margin-top:5rem;
+}
+
+/* Contact */
+#Contact {
+  margin-top:5rem;
+}
+
+#Contact .info {
+  width: 100%;
+  background: #fff;
+}
+
+#Contact .info i {
+  font-size: 20px;
+  color: #fff;
+  float: left;
+  width: 44px;
+  height: 44px;
+  background: #ffff00;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+}
+
+#Contact .info h4 {
+  padding: 0 0 0 60px;
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 5px;
+  color: #222222;
+}
+
+#Contact .info p {
+  padding: 0 0 0 60px;
+  margin-bottom: 0;
+  font-size: 14px;
+  color: #555555;
+}
+
+#Contact .info .email, #Contact .info .phone {
+  margin-top: 40px;
+}
+
+#Contact .info .email:hover i, #Contact .info .address:hover i, #Contact .info .phone:hover i {
+  background: #000;
+  color: #fff;
+}
+
+#Contact .php-email-form {
+  width: 100%;
+  background: #fff;
+}
+
+#Contact .php-email-form .form-group {
+  padding-bottom: 8px;
+}
+
+#Contact .php-email-form .validate {
+  display: none;
+  color: red;
+  margin: 0 0 15px 0;
+  font-weight: 400;
+  font-size: 13px;
+}
+
+#Contact .php-email-form .error-message {
+  display: none;
+  color: #fff;
+  background: #ed3c0d;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
+
+#Contact .php-email-form .sent-message {
+  display: none;
+  color: #fff;
+  background: #18d26e;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
+
+#Contact .php-email-form .loading {
+  display: none;
+  background: #fff;
+  text-align: center;
+  padding: 15px;
+}
+
+#Contact .php-email-form .loading:before {
+  content: "";
+  display: inline-block;
+  border-radius: 50%;
+  width: 24px;
+  height: 24px;
+  margin: 0 10px -6px 0;
+  border: 3px solid #18d26e;
+  border-top-color: #eee;
+  -webkit-animation: animate-loading 1s linear infinite;
+  animation: animate-loading 1s linear infinite;
+}
+
+#Contact .php-email-form input, #Contact .php-email-form textarea {
+  border-radius: 4px;
+  box-shadow: none;
+  font-size: 14px;
+}
+
+#Contact .php-email-form input:focus, #Contact .php-email-form textarea:focus {
+  border-color: #ffff00;
+}
+
+#Contact .php-email-form input {
+  height: 44px;
+}
+
+#Contact .php-email-form textarea {
+  padding: 10px 12px;
+}
+
+#Contact .php-email-form button[type="submit"] {
+  background: #ffff00;
+  border: 0;
+  padding: 10px 30px 12px 30px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 50px;
+}
+
+#Contact .php-email-form button[type="submit"]:hover {
+  background: #000;
 }
 
 /* Sign In/Up */
@@ -233,6 +380,11 @@ nav .nav-link{
     text-decoration: none;
   }
 
+/* How To Buy */
+#Howtobuy {
+  margin-top:5rem;
+}
+
 /* Back To Top */
 .back-to-top {
   position: fixed;
@@ -264,5 +416,9 @@ nav .nav-link{
 @media screen and (max-width: 600px) {
   .back-to-top {
     bottom: 15px;
+  }
+
+  .modal .search-form {
+    width: 100%;
   }
 }
